--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="KFrHjgl2RKQ4euUi45_LAXLRjca4I7RHeCLCA7gSp5M" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Loan EMI Calculator</title>
@@ -147,3 +148,4 @@
   </script>
 </body>
 </html>
+
